<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BakingActivity">

        <FrameLayout
            android:id="@+id/fl_recipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>

    </android.support.constraint.ConstraintLayout>
</layout>